test/sema/exercise/parameter_mutability.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

fn mutableParam(mut n: number): unit {
  n = 1;
}

fn immutableParam(n: number): unit {
  n = 1;
  // CHECK: [[# @LINE - 1 ]]:5: error: 'n' cannot be mutated
}

fn main(): unit {
}
